# mcprofiles

./: .gitignore  CMakeLists.txt
.ccls-cache/@@home@keinr@git@mcprofiles/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@assert.h.blob  @usr@include@c++@10@algorithm.blob  @usr@include@c++@10@array.blob  @usr@include@c++@10@backward@auto_ptr.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@algorithmfwd.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocated_ptr.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@atomic_base.h.blob  @usr@include@c++@10@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@10@bits@basic_ios.h.blob  @usr@include@c++@10@bits@basic_ios.tcc.blob  @usr@include@c++@10@bits@basic_string.h.blob  @usr@include@c++@10@bits@basic_string.tcc.blob  @usr@include@c++@10@bits@char_traits.h.blob  @usr@include@c++@10@bits@charconv.h.blob  @usr@include@c++@10@bits@codecvt.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_forced.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@enable_special_members.h.blob  @usr@include@c++@10@bits@erase_if.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  (+252 more)
src/: Menu.cpp  Profile.h  Profiles.cpp  Profiles.h  main.cpp  util.cpp  util.h
(+27 files in other folders)
